tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vcvtpd2dq_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:184:26: error: use of undefined value '@my.fabs.f64'
  %11 = tail call double @my.fabs.f64(double %10) #22
                         ^
0.03user 0.02system 0:00.19elapsed 27%CPU (0avgtext+0avgdata 27892maxresident)k
0inputs+16outputs (0major+3281minor)pagefaults 0swaps
